--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "instamojo-nodejs": "0.0.5",
     "mongoose": "^5.7.1",
     "multer": "^1.4.2",
+    "nodemon": "^1.19.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^5.0.1"
